# liqpref-waterfall-py

./: .gitignore  CLAUDE.md  README.md  captable-2.csv  captable-3.csv  captable.csv  captable_lpw_format.csv  cli.py  lpw.py  pyproject.toml  requirements.txt  sbda.csv  simple_captable.csv  updated_captable.csv
.claude/: settings.local.json
Attic/: challenge.py  csv_waterfall.py  debug_cap.py  debug_waterfall.py  demo.py  simple_waterfall.py  updated_challenge.py  waterfall.py
doc/: LPW.md  PARTICIPATION_CAP_LOGIC.md  PRIORITY_GROUPS.md  WATERFALL_LOGIC.md
liquidation_waterfall/: __init__.py  core.py  formatters.py  parser.py
tests/: test_cli.py  test_core.py  test_fixtures.py  test_formatters.py  test_integration.py  test_parser.py  test_participation_cap.py  test_participation_caps.py  test_priority_groups.py  test_stacking_groups.py  test_updated_waterfall.py  test_waterfall.py  test_waterfall_algorithm.py
