[project]
name = "liquidation-preference-waterfall"
version = "1.0.0"
description = "A comprehensive library for modeling startup liquidation preferences, including stacked liquidation preferences, participation rights, caps, and conversion scenarios."
readme = "README.md"
requires-python = ">=3.8"
dependencies = []
authors = [
    {name = "Liquidation Waterfall Calculator"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
]
keywords = ["liquidation", "preference", "waterfall", "startup", "finance", "investment"]

[project.scripts]
lpw = "cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
